--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "replc",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "description": "Package sensitive node REPL, something, which aims to be similar to the `rails c` for node.",
   "main": "replc.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "author": "ifroz <ifrozen@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "ansi-highlight": "^1.0.2",
     "colors": "^1.0.3",
     "lodash": "^3.5.0"
   },
