--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "`replc` is a colorful cli console for  iojs. It operates in your current working directory.",
   "main": "replc.js",
   "scripts": {
+    "babel": "babel-node ./replc.js --replc",
     "start": "node ./replc.js --replc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,13 +12,22 @@
   "license": "ISC",
   "dependencies": {
     "ansi-highlight": "^1.0.2",
+    "async": "^0.9.0",
+    "babelify": "^5.0.4",
+    "browserify": "^9.0.3",
+    "browserify-string": "^1.1.0",
     "colors": "^1.0.3",
+    "gulp-watch": "^4.2.1",
     "humps": "^0.4.2",
     "lodash": "^3.5.0"
   },
   "devDependencies": {
-    "chai": "^2.1.2",
+    "chai": "^2.2.0",
     "expect": "^1.6.0",
-    "gulp": "^3.8.11"
+    "gulp": "^3.8.11",
+    "gulp-mocha": "^2.0.0"
+  },
+  "optionalDependencies": {
+    "babel": "4.7.16"
   }
 }
